ggplot2 0.8.4  (2008-XX-XX)
----------------------------------------

* always sort input to geom_ribbon
* stat_spoke now works with reversed scales
* corrected list of aesthetics to include american spelling of colour as well as base R abbreviations
* position_stack: fixed bug in detection of overlap for negative values
* scale_x_inverse, scale_y_inverse now actually work, and added recip as alias
* geom_smooth was incorrectly applying alpha to line colour in the legend
* fix bug in detecting which aesthetics are calculated
* annotate works with missing x and y (e.g. for geom_rect)
* position_collide now works with missing values
* continuous scale limits should now be automatically sorted
* geom_point: the alpha aesthetic now also affects the fill.
* stat_qq: now correctly groups results
* facet_wrap: can now specify both ncol and nrow without getting an error
* facet_wrap: now works with statistics that produce both x and y values (e.g. stat_qq)
* geom_boxplot: alpha now affects fill colour of boxes only