@@ -233,7 +233,7 @@ Layer <- proto(expr = {
   }
   
   make_grob <- function(., data, scales, cs) {
-    if (empty(data)) return(nullGrob())
+    if (empty(data)) return(zeroGrob())
     data <- .$use_defaults(data)
     
     check_required_aesthetics(.$geom$required_aes, c(names(data), names(.$geom_params)), paste("geom_", .$geom$objname, sep=""))
