@@ -60,7 +60,7 @@ ggplotGrob <- function(plot, drop = plot$options$drop, keep = plot$options$keep,
   legend_box <- if (position != "none") {
     guide_legends_box(scales, plot$layers, plot$mapping, horiz, theme) 
   } else {
-    nullGrob()
+    zeroGrob()
   } 
   
   title <- theme_render(theme, "plot.title", plot$options$title)
@@ -78,7 +78,7 @@ ggplotGrob <- function(plot, drop = plot$options$drop, keep = plot$options$keep,
     panels = panels, legend_box = legend_box
   )
   if (!is.null(keep)) drop <- setdiff(names(grobs), keep)
-  if (!is.null(drop)) grobs[drop] <- rep(list(nullGrob()), length(drop))
+  if (!is.null(drop)) grobs[drop] <- rep(list(zeroGrob()), length(drop))
 
   # Calculate sizes ----------------------------------------------------------
   if (is.null(legend_box)) position <- "none"
