@@ -16,3 +16,4 @@ ggplot2 0.8.4  (2008-XX-XX)
 * facet_wrap: can now specify both ncol and nrow without getting an error
 * facet_wrap: now works with statistics that produce both x and y values (e.g. stat_qq)
 * geom_boxplot: alpha now affects fill colour of boxes only
+* nullGrob renamed to zeroGrob to avoid name conflict with grid
